# gopro-overlay

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  conanfile.py  conanfile.txt
apps/: AlignmentPlotStandalone.cpp  CMakeLists.txt  ProjectApp.cpp  TrackEditor.cpp  TrackEditorApp.cpp  gopro_overlay.cpp  msq-parse.cpp  single_overlay.cpp  topbottom_overlay.cpp
apps/cli/: CMakeLists.txt  opencl_test.cpp  single_overlay.cpp  topbottom_overlay.cpp
apps/gui/: AlignmentPlotStandalone.cpp  CMakeLists.txt  DataViewerApp.cpp  ProjectApp.cpp  TelemetryMergerStandalone.cpp  TrackEditorApp.cpp  gopro_overlay.cpp  gpo.cpp
apps/gui/cmds/: AlignmentPlotCmd.cpp  AlignmentPlotCmd.h  Command.cpp  Command.h  ListOpenCL_DevicesCmd.cpp  SingleOverlayCmd.cpp  TelemetryMergeCmd.cpp  TrackEditorCmd.cpp  TrackEditorCmd.h
apps/gui/res/: resources.qrc
apps/gui/widgets/: AlignmentPlot.cpp  AlignmentPlot.h  AlignmentPlot.ui  CMakeLists.txt  DataViewerWindow.cpp  DataViewerWindow.h  DataViewerWindow.ui  RenderEngineWizardSingleVideo.cpp  RenderEngineWizardSingleVideo.ui  TelemetryMerger.cpp  TelemetryMerger.h  TelemetryMerger.ui  cvimageview.cpp  cvimageview.h  progressdialog.h  projectwindow.cpp  projectwindow.h  projectwindow.ui  renderenginewizard_topbottom.ui  renderentitypropertiestab.cpp  renderentitypropertiestab.h  renderentitypropertiestab.ui  renderthread.cpp  renderthread.h  scrubbablevideo.cpp  scrubbablevideo.h  scrubbablevideo.ui  trackeditor.cpp  trackeditor.h  trackeditor.ui  trackview.cpp  trackview.h  trackview.ui
apps/gui/widgets/utils/: ProjectSettings.cpp  (+2 more)
apps/ui/: AlignmentPlot.cpp  AlignmentPlot.h  AlignmentPlot.ui  CMakeLists.txt  ColorPicker.ui  PlotDialog.cpp  PlotDialog.h  PlotDialog.ui  ProgressTimer.h  RenderEngineWizardSingleVideo.h  TelemetryPlotDialog.cpp  TelemetryPlotDialog.h  cvimageview.cpp  cvimageview.h  cvimageview.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  progressdialog.cpp  progressdialog.h  progressdialog.ui  projectwindow.cpp  projectwindow.h  projectwindow.ui  projectwindow.ui.autosave  renderenginewizard_topbottom.cpp  renderentitypropertiestab.cpp  renderentitypropertiestab.h  renderentitypropertiestab.ui  renderthread.cpp  renderthread.h  scrubbablevideo.cpp  scrubbablevideo.h  trackeditor.cpp  trackeditor.h  trackeditor.ui  trackview.cpp  trackview.h
apps/ui/qcustomplot/: CMakeLists.txt
src/: CMakeLists.txt  application.cpp  gopro_overlay.cpp  topbottom_overlay.cpp
src/FrictionCircleObject/: FrictionCircleObject.cpp  FrictionCircleObject.h
src/LapTimerObject/: CMakeLists.txt  LapTimerObject.cpp  LapTimerObject.h
src/RenderedObject/: RenderedObject.cpp  RenderedObject.h
src/TrackMapObject/: CMakeLists.txt  TrackMapObject.cpp  TrackMapObject.h
src/data/: CMakeLists.txt  DataFactory.cpp  DataSource.cpp  GroupedSeeker.cpp  ModifiableObject.cpp  RenderProject.cpp  TelemetrySample.cpp  TelemetrySeeker.cpp  TelemetrySource.cpp  TrackDataObjects.cpp  VideoSource.cpp
src/data/DataFactory/: CMakeLists.txt  DataFactory.cpp  DataFactory.h
src/data/TelemetrySample/: CMakeLists.txt  TelemetrySample.h
src/data/TelemetrySeeker/: CMakeLists.txt  TelemetrySeeker.cpp  TelemetrySeeker.h
src/data/TelemetrySource/: CMakeLists.txt  TelemetrySource.cpp  TelemetrySource.h
src/data/TrackDataObjects/: CMakeLists.txt  TrackDataObjects.cpp  TrackDataObjects.h
src/data/VideoSource/: CMakeLists.txt  VideoSource.cpp  VideoSource.h
src/gpo/: CMakeLists.txt  gpo.cpp
src/gpo/assets/: mk_icon.sh
src/gpo/cmds/: AlignmentPlotCmd.hpp  Command.cpp  Command.hpp  ListOpenCL_DevicesCmd.cpp  ListOpenCL_DevicesCmd.h  ListOpenCL_DevicesCmd.hpp  SingleOverlayCmd.cpp  SingleOverlayCmd.h  SingleOverlayCmd.hpp  TelemetryMergeCmd.h  TelemetryMergeCmd.hpp  TopBottomOverlayCmd.cpp  TopBottomOverlayCmd.h  TopBottomOverlayCmd.hpp  TrackEditorCmd.hpp
src/gpo/widgets/: AlignmentPlot.cpp  AlignmentPlot.h  AlignmentPlot.ui  CMakeLists.txt  ColorPicker.cpp  ColorPicker.h  ScrubbableVideo.cpp  ScrubbableVideo.h  TelemetryMerger.cpp  TelemetryMerger.ui  TelemetryPlotDialog.cpp  TelemetryPlotDialog.h  TelemetryPlotDialog.ui  cvimageview.cpp  cvimageview.h  projectwindow.cpp  projectwindow.h  projectwindow.ui  renderenginewizard_topbottom.h  renderentitypropertiestab.cpp  renderentitypropertiestab.h  renderthread.cpp  renderthread.h  scrubbablevideo.cpp  scrubbablevideo.h  trackeditor.cpp  trackeditor.h  trackview.cpp  trackview.h
src/graphics/: CMakeLists.txt  FrictionCircleObject.cpp  LapTimerObject.cpp  QTelemetryPlot.cpp  RenderEngine.cpp  RenderedObject.cpp  SpeedometerObject.cpp  TelemetryObject.cpp  TelemetryPlot.cpp  TelemetryPlotObject.cpp  TelemetryPrintoutObject.cpp  TextObject.cpp  TrackMapObject.cpp  VideoObject.cpp
src/graphics/FrictionCircleObject/: CMakeLists.txt  FrictionCircleObject.cpp  FrictionCircleObject.h
src/graphics/LapTimerObject/: CMakeLists.txt  LapTimerObject.cpp  LapTimerObject.h
src/graphics/RenderedObject/: CMakeLists.txt  RenderedObject.cpp
src/graphics/SpeedometerObject/: CMakeLists.txt  SpeedometerObject.cpp  SpeedometerObject.h
src/graphics/TelemetryObject/: CMakeLists.txt  TelemetryObject.cpp  TelemetryObject.h
src/graphics/TelemetryPrintoutObject/: CMakeLists.txt  TelemetryPrintoutObject.cpp  TelemetryPrintoutObject.h
src/graphics/TextObject/: CMakeLists.txt  TextObject.cpp  TextObject.h
src/graphics/TrackMapObject/: CMakeLists.txt  TrackMapObject.cpp  TrackMapObject.h
src/graphics/VideoObject/: CMakeLists.txt  VideoObject.cpp  VideoObject.h
src/matlab/: .gitignore  alignMslToGoPro.m  env_setup.m
src/matlab/+dsp/: findPeaks.m  smoothMovingAvg.m
src/matlab/+msq/: logToVehicleTelem.m  readlog.m
src/matlab/+telem/: allocVehicleTelem.m  findLerpIndex.m  lerp.m  lerpVehicleTelem.m  resampVehicleTelem.m
src/utils/: CMakeLists.txt  DataProcessingUtils.cpp  LineSegmentUtils.cpp  OpenCV_Utils.cpp
src/utils/LineSegmentUtils/: CMakeLists.txt
src/utils/io/: CSV_Utils.cpp
src/utils/misc/: MiscUtils.cpp
test/test_data/: CMakeLists.txt  test_data.h
test/test_data/solostorm/: 20230312_solostorm.csv
(+73 files in other folders)
