add_subdirectory(RenderedObject)
add_subdirectory(TelemetryObject)
add_subdirectory(TrackMapObject)
add_subdirectory(FrictionCircleObject)
add_subdirectory(LapTimerObject)
add_subdirectory(SpeedometerObject)
add_subdirectory(VideoObject)
add_subdirectory(TelemetryPrintoutObject)
add_subdirectory(TextObject)
